# playground

./: .gitignore  CMakeLists.properties  CMakeLists.txt  cmake-clean.sh  cmakew  cmakew.dependencies  lldb.settings  main.cpp  readme.txt  resources.md  resources.txt  todos.md  todos.txt
src/: CMakeLists.txt  main.cpp
src/audio/: AudioRunner.h  CMakeLists.txt
src/audio/adapters/: BufferResourceAdapter.h  OggResourceAdapter.h  SourceResourceAdapter.h  WavResourceAdapter.h
src/audio/resources/: AudioResource.h  BufferResource.h  SourceResource.h
src/core/: Chronometer.h  Playground.cpp  Playground.h
src/exceptions/: CMakeLists.txt  Exception.h  InvalidArgumentException.h  InvalidOperationException.h  InvalidStateException.h
src/geometry/: CMakeLists.txt  Geometry.h
src/geometry/intersection/: BaseContact.h  CollisionTester.h  GeometryContact.h  IntersectionHelper.h
src/geometry/tests/: CollisionTesterTests.h
src/javaLike/: CMakeLists.txt  JavaLike.h  StringFormatter.h  StringUtils.h
src/log/: CMakeLists.txt  Logger.cpp  Logger.h
src/openGL/: CMakeLists.txt  OpenGLRunner.h  OpenGLUtilities.h
src/openGL/adapters/: CubeMapResourceAdapter.h  FragmentShaderResourceAdapter.h  MeshResourceAdapter.h  OpenGLResourceAdapter.h  ShaderProgramResourceAdapter.h  ShaderResourceAdapter.h  TerrainResourceAdapter.h  TextureResourceAdapter.h  VertexArrayAdapter.h  VertexShaderResourceAdapter.h
src/parser/: CMakeLists.txt  JsonParser.h  ParsingException.h  TextParser.h
src/physics/: CollisionDetector.h  ContactResolver.h  Force.h  Particle.h  ParticleContact.h  ParticleIntegrator.h  ParticleManager.h  PhysicsRunner.h
src/physics/forces/: Gravity.h
src/physics/tests/: CollisionDetectorTests.h  ContactResolverTests.h
src/playground/: CMakeLists.txt
src/playground/core/: CMakeLists.txt  Chronometer.h  Playground.cpp  Playground.h
src/playground/javaLike/: CMakeLists.txt  JavaLike.h  StringFormatter.h  StringUtils.h
src/playground/log/: CMakeLists.txt  Logger.cpp  Logger.h
src/playground/parser/: JsonParser.h  TextParser.h
src/playground/resources/: CMakeLists.txt  FileParser.cpp  FileParser.h  MimeTypes.h  Paths.h  Resource.h  ResourceAdapter.cpp  ResourceAdapter.h  ResourceCache.h  ResourceLoadRequest.h  ResourceLoadResponse.cpp  ResourceManager.cpp  ResourceManager.h
src/playground/resources/tests/: PathsTests.h  ResourceLoadRequestTests.h  ResourceLoadResponseTests.h  ResourceManagerTests.h
src/playground/runners/: CMakeLists.txt
src/playground/runners/audio/: AudioRunner.cpp  AudioRunner.h  AudioSource.h  CMakeLists.txt
src/playground/runners/physics/: CMakeLists.txt
src/playground/runners/video/: SceneNode.h  VideoRunner.h
src/projects/: CMakeLists.txt
src/projects/openALRunner/: CMakeLists.txt  OpenALRunner.h
src/projects/openALRunner/adapters/: BufferResourceAdapter.h
src/projects/openALRunner/resources/: BufferResource.h  CMakeLists.txt
src/resources/: CMakeLists.txt  FileParser.h  MimeTypes.h  Paths.h  Resource.h  ResourceAdapter.h  ResourceLoadRequest.h  ResourceLoadResponse.h  ResourceManager.cpp  ResourceManager.h
src/resources/tests/: PathsTests.h  ResourceLoadRequestTests.h  ResourceLoadResponseTests.h  ResourceManagerTests.h
src/resources/tests/mock/: ResourceAdapterMock.h  ResourceLoadResponseMock.h  ResourceManagerMock.h
src/runners/: CMakeLists.txt
src/runners/audio/: AudioRunner.h  CMakeLists.txt
src/runners/audio/adapters/: BufferResourceAdapter.h  OggResourceAdapter.h  SourceResourceAdapter.h  WavResourceAdapter.h
src/runners/audio/resources/: AudioResource.h  BufferResource.h  SourceResource.h
src/runners/base/: CMakeLists.txt
src/runners/base/audio/: AudioRunner.cpp  AudioRunner.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt
src/runners/base/video/: VideoRunner.cpp
src/runners/openAL/: CMakeLists.txt  OpenALRunner.h
src/runners/openAL/adapters/: AudioBufferResourceAdapter.h  AudioSourceResourceAdapter.h
src/runners/openGL/: CMakeLists.txt  OpenGLRunner.h  OpenGLUtilities.cpp  OpenGLUtilities.h
src/runners/openGL/adapters/: CubeMapResourceAdapter.h  (+9 more)
src/runners/physics/: CMakeLists.txt  PhysicsRunner.h
src/runners/video/: CMakeLists.txt  Renderer.h  SceneNode.h  VideoAttribute.h  VideoRunner.h
src/runnersImpl/: CMakeLists.txt
src/runnersImpl/openAL/: OpenALRunner.h
src/runnersImpl/openGL/: Win32GLRunner.h
src/test/: CMakeLists.txt  Tests.h
src/video/: Renderer.h  SceneNode.h  VideoRunner.h
src/video/adapters/: GeometryResourceAdapter.h  HeightMapResourceAdapter.h  JpegResourceAdapter.h  MtlResourceAdapter.h  ObjResourceAdapter.h  PngResourceAdapter.h  TgaResourceAdapter.h
src/video/renderers/: DefaultRenderer.h  GridRenderer.h  SkyboxRenderer.h  TerrainRenderer.h
src/video/resources/: CubeMapResource.h  GeometryCollection.h  GeometryResource.h  HeightMapResource.h  ImageResource.h  LightResource.h  MaterialCollection.h  MaterialResource.h  MeshCollection.h  MeshResource.h  ShaderProgramResource.h  ShaderResource.h  TerrainResource.h  TextureResource.h  VertexArrayResource.h
src/video/tests/: GeometryResourceAdapterTests.h  ObjResourceAdapterTests.h  videoTests.h
test/: CMakeLists.txt  audioRunnerTests.cpp  playgroundTests.cpp
test/resources/: fileToParse.json  jsonTestFile.json
test/resources/geometry/: axes.mtl  geometry.json
test/resources/shader/: shaderProgram.json  vertexShader.glsl
test/src/: CMakeLists.txt  audioRunnerTests.cpp  openGLRunnerTests.cpp  playgroundTests.cpp  videoRunnerTests.cpp
test/src/matchers/: CMakeLists.txt  mathMatchers.h
test/src/mock/: CMakeLists.txt  GeometryResourceAdapterMock.h  PlaygroundMock.h  ResourceAdapterMock.h  ResourceLoadResponseMock.h  ResourceManagerMock.h  VideoRunnerMock.h
test/src/playground/: CMakeLists.txt  PathsTest.cpp  ResourceManagerTest.cpp  ResourceTest.cpp  UtilityCoverageTests.cpp  playgroundTests.cpp
test/src/runners/: CMakeLists.txt  audioRunnerTests.cpp  cameraTests.cpp  openALRunnerTests.cpp  openGLRunnerTests.cpp  physicsRunnerTests.cpp  renderersTests.cpp  videoRunnerTests.cpp
(+99 files in other folders)
